# prk_async_dataflow

./: Cargo.toml  Readme.md
benches/: concurrency_bench.rs  memory_bench.rs  parser_bench.rs  profile_bench.rs  real_world_bench.rs
benches/test-data/: large-dataset.txt
examples/: ai_agent.rs  batch.rs  batch_ws.rs  full_demo.rs  metrics.rs  parser.rs  stream_batch.rs  stream_transformer.rs  tcp_server.rs  transform_auto.rs  transformer.rs  ws_connector.rs  ws_server.rs
src/: agents.rs  async_parser.rs  config.rs  connectors.rs  extract_json.rs  lib.rs  main.rs  metrics.rs  proto.rs  reader.rs  stream_adapter.rs  transformers.rs  utils.rs
src/tests/: basic_offset_tests.rs  basic_tests.rs  common_tests.rs  ignore_invalid.rs  mod.rs  tests.rs  tranformantion_tests.rs  zero_copy.rs
