[package]
name = "prk_async_dataflow"
version = "0.2.0"
edition = "2021"
description = "An asynchronous dataflow processing library for Rust with SIMD-accelerated JSON parsing and AI agent capabilities."
keywords = ["async", "json", "tokio", "simd", "ai", "agent"]
license = "MIT"
categories = ["asynchronous", "parsing", "ai"]
repository = "https://github.com/prk-Jr/prk_async_dataflow"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
simd-json = { version = "0.13.8", features = ["serde_impl"] }
tokio = { version = "1.43.0", features = ["full", "time", "rt-multi-thread"] }
json5 = { version = "0.4.1", optional = true }
tokio-stream = "0.1.14"
tracing = "0.1.40"
bytes = "1.5.0"
thiserror = "2.0.11"
memchr = "2.7.1"
futures = "0.3.30"
reqwest = { version = "0.11.22", features = ["json"] }
tokio-tungstenite = "0.20.1"
prometheus = "0.13.3"
schemars = "0.8.15"
validator = "0.16.1"
async-trait = "0.1.77"
tokio-util = { version = "0.7.10", features = ["codec"] }
dashmap = "5.5.3"
lazy_static = "1.4.0"


[features]
relaxed = ["json5"]

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "test-util", "rt-multi-thread"] }
criterion = { version = "0.5.1", features = ["html_reports", "async"] }
rand = "0.8.5"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "real_world_bench"
harness = false

[[bench]]
name = "concurrency_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "profile_bench"
harness = false