[package]
name = "prk_async_dataflow"
version = "0.2.2"
edition = "2021"
description = "An asynchronous dataflow processing library for Rust with SIMD-accelerated JSON parsing and AI agent capabilities."
keywords = ["async", "json", "simd", "ai", "agent"]
license = "MIT"
categories = ["asynchronous", "parsing",]
repository = "https://github.com/prk-Jr/prk_async_dataflow"

# The following dependencies are used in the project:
[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
simd-json = { version = "0.13.8", features = ["serde_impl"] }
tokio = { version = "1.43.0", features = ["full", "time", "rt-multi-thread"] }
json5 = { version = "0.4.1", optional = true }
tokio-stream = { version = "0.1.14"}
tracing = { version = "0.1.40" }
bytes = { version = "1.5.0" }
thiserror = { version = "2.0.11"}
futures = { version = "0.3.30" }
reqwest = { version = "0.11.22", features = ["json", "stream"], optional = true }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"], optional = true }
prometheus = { version = "0.13.3", optional = true }
schemars = { version = "0.8.15" }
validator = { version = "0.16.1" }
async-trait = { version = "0.1.77", optional = true }
tokio-util = { version = "0.7.10", features = ["codec", "compat"], optional = true }
dashmap = { version = "6.1.0", optional = true }
lazy_static = { version = "1.4.0"}
oauth2 = { version = "4.2.0", optional = true }
tch = { version = "0.19.0", optional = true }
prost = { version = "0.11", optional = true }
base64 = { version = "0.22", optional = true }
tonic = { version = "0.12", optional = true, features = ["tls-roots"] }
config = { version = "0.13", optional = true }
governor = { version = "0.4", optional = true }
tokio-retry = { version = "0.3", optional = true }
halfbrown = { version = "0.2.5", optional = true }
async-stream = "0.3"



[features]
default = ["http", "connectors", "metrics", "basic_agents", "auth",]
relaxed = ["json5"]
http = ["reqwest"]
websocket = ["tokio-tungstenite"]
ml = ["tch"]
auth = ["oauth2"]
basic_agents = ["dashmap"]
advanced_agents = ["ml", "auth"]
connectors = ["http", "websocket", "async-trait", "tokio-util"]
metrics = ["prometheus"]
grpc = ["tonic", "prost"]
protobuf = ["prost", "base64", "halfbrown"]
configs = ["config"]
rate-limiting = ["governor"]
circuit-breaker = ["tokio-retry"]

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "test-util", "rt-multi-thread"] }
criterion = { version = "0.5.1", features = ["html_reports", "async", "async_futures"] }
rand = "0.8.5"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "real_world_bench"
harness = false

[[bench]]
name = "concurrency_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "profile_bench"
harness = false